--- a/index.html
+++ b/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
+<link rel="stylesheet" href="main.css">
 <head>
     <title>Hera Yang</title>
 </head>
 <body>
-
+    
     <h1>Hera Yang</h1>
+    <div class="top">
+        <div class="top-menu">
+            <a href="#">home</a>
+            <a href="#">home</a>
+            <a href="#">home</a>
+        </div>
+    </div>
+
+    <div class="mainbox">
+        <h2>Hi, I'm Hera Yang</h2>
+        <p> I'm currently working on my degree in Computer Science. 
+            I love to create
+        </p>
+
+    </div>
 </body>
 
 </html>
