--- a/index.html
+++ b/index.html
@@ -4,22 +4,43 @@
     <title>Hera Yang</title>
 </head>
 <body>
-    
-    <h1>Hera Yang</h1>
-    <div class="top">
-        <div class="top-menu">
-            <a href="#">home</a>
-            <a href="#">home</a>
-            <a href="#">home</a>
-        </div>
-    </div>
+
+    <header>
+        <h1>Hera Yang</h1>
+        <ul>
+            <li><a href="#">home</a></li>
+            <li><a href="#">About Me</a></li>
+            <li><a href="#myprojects">Projects</a></li>
+            <li><a href="#">My art</a></li>
+        </ul>
+    </header>
 
     <div class="mainbox">
-        <h2>Hi, I'm Hera Yang</h2>
-        <p> I'm currently working on my degree in Computer Science. 
-            I love to create
-        </p>
+        
+        <section id="aboutMe">
+            <h2>Hi, I'm Hera Yang</h2>
+            <p> A Computer Science Major, currently working on BS degree in BYU-i. </p>
+        </section>
+        <section id="myprojects">
+            <h2>Projects</h2>
+            <p>A list of projects I've worked on!</p>
+            <a>learn more</a>
+        </section>
+        <section>
+            <h2>What I love</h2>
+            <p>I like to let my creativity out by doodling. Check out this gallery of 
+                cool things I've made! :)
+            </p>
+        </section>
 
+    </div>
+
+    <div class="foot">
+        <!-- I think probably my contacts here (facebook, maybe) -->
+        <ul>
+            <li>instagram</li>
+            <li></li>
+        </ul>
     </div>
 </body>
 
